--- a/Project.toml
+++ b/Project.toml
@@ -21,10 +21,10 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 [compat]
 DataFrames = "0.20"
 DataStreams = "0.4"
-MbedTLS = "0.7"
+MbedTLS = "0.7, 1"
 Millboard = "0.2"
 OrderedCollections = "1"
 Reexport = "0.2"
 Revise = "2"
-YAML = "0.3"
+YAML = "0.4"
 julia = "1"
